Adding controller's adsal-compatibility features
1) Feature Tests Pass: https://jenkins.opendaylight.org/controller/job/controller-merge/2669/org.opendaylight.controller$features-adsal-compatibility/testReport/
2) Features Comply with Guidelines: https://git.opendaylight.org/gerrit/gitweb?p=controller.git;a=blob;f=features/adsal-compatibility/src/main/resources/features.xml;h=de939f219acc5bf438e4660a77eafaedc405a90a;hb=HEAD
	a) Feature Names: Prefixed with 'odl-' : https://wiki.opendaylight.org/view/Runtime:Karaf_Features_Guidelines#Feature_Naming
	b) Features Descriptions: Present https://wiki.opendaylight.org/view/Runtime:Karaf_Features_Guidelines#Description
	c) Features Start-Levels: No start-levels on <bundle> elements or <feature> elements
3) Features Tested: Features have been tested for functionality with
	a) feature:install odl-adsal-compatibility
	b) feature:install odl-integration-compatible-with-l2switch
4) Integration Test Impact AD-SAL integration tests *should* work with this now.
Ping tests will need l2switch.

Note: This was tested with odl-integration-compatible-with-l2switch because
it allows us to do pingall and see the resulting stats, topology, etc
with the AD-SAL rest interface.

Change-Id: Ib56b7c1662cad1eab3992b4e6ac602de3b1f2542
Signed-off-by: Ed Warnicke <eaw@cisco.com>

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -56,6 +56,13 @@
       <classifier>features</classifier>
       <type>xml</type>
     </dependency>
+    <dependency>
+      <groupId>org.opendaylight.controller</groupId>
+      <artifactId>features-adsal-compatibility</artifactId>
+      <version>1.4.2-SNAPSHOT</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
     <!-- test to validate features.xml -->
     <dependency>
       <groupId>org.opendaylight.yangtools</groupId>
