Adding lispflowmapping features
1) Feature Tests Pass: https://jenkins.opendaylight.org/lispflowmapping/job/lispflowmapping-merge-develop/org.opendaylight.lispflowmapping$features-lispflowmapping/229/testReport/
2) Features Comply with Guidelines: https://git.opendaylight.org/gerrit/gitweb?p=lispflowmapping.git;a=blob;f=features/src/main/resources/features.xml;h=1c34efe8e256f57bab371b56b3aadc863ba99850;hb=09bca5ccf588d25a52f8ec2749acb192dd985aa0
3) Features Tested: Features have been tested for functionality with
   a) feature:install odl-lispflowmapping-all
4) Integration Test Impact: As far as we know, no one is using these features yet.  We're unaware of other project's dependency on LISP outside of Karaf as well.

Change-Id: I9345eba8021ea89b3680f50453a75ffe5ce03f68
Signed-off-by: Lorand Jakab <lojakab@cisco.com>

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -84,6 +84,13 @@
       <classifier>features</classifier>
       <type>xml</type>
     </dependency>
+    <dependency>
+      <groupId>org.opendaylight.lispflowmapping</groupId>
+      <artifactId>features-lispflowmapping</artifactId>
+      <version>${feature.lispflowmapping.version}</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
     <!-- test to validate features.xml -->
     <dependency>
       <groupId>org.opendaylight.yangtools</groupId>
