Adding VTN features
1) Feature Tests Pass:
https://jenkins.opendaylight.org/vtn/job/vtn-merge/288/org.opendaylight.vtn$features-vtn-manager/testReport/
2) Features Comply with Guidelines:
https://git.opendaylight.org/gerrit/gitweb?p=vtn.git;a=blob;f=manager/features/src/main/resources/features.xml;h=739547ea5b3386631356c2dcf73b5cc1316f40db
    a) Feature Names: Prefixed with 'odl-' :
https://wiki.opendaylight.org/view/Runtime:Karaf_Features_Guidelines#Feature_Naming
    b) Features Descriptions: Present
https://wiki.opendaylight.org/view/Runtime:Karaf_Features_Guidelines#Description
    c) Features Start-Levels: No start-levels on <bundle> elements or
<feature> elements
3) Features Tested: Features have been tested for functionality with
    a) feature:install odl-vtn-manager-all
    b) feature:install odl-integration-compatible-with-vtn-manager
4) Integration Test Impact: VTN integration tests should work with this.

Change-Id: I230a868221d4894a05bb84a41b8a7015932b5f26
Signed-off-by: Hideyuki Tai <Hideyuki.Tai@necam.com>

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -91,6 +91,12 @@
       <classifier>features</classifier>
       <type>xml</type>
     </dependency>
+    <dependency>
+      <groupId>org.opendaylight.vtn</groupId>
+      <artifactId>features-vtn-manager</artifactId>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
     <!-- test to validate features.xml -->
     <dependency>
       <groupId>org.opendaylight.yangtools</groupId>
