--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
     <feature.ovsdb.version>1.0.0-SNAPSHOT</feature.ovsdb.version>
     <feature.ovsdb.openstack.version>1.0.0-SNAPSHOT</feature.ovsdb.openstack.version>
     <feature.lispflowmapping.version>1.1.11-SNAPSHOT</feature.lispflowmapping.version>
+    <feature.vtn-manager.version>0.2.0-SNAPSHOT</feature.vtn-manager.version>
     <karaf.branding.version>1.0.0-SNAPSHOT</karaf.branding.version>
     <karaf.version>3.0.1</karaf.version>
     <maven.surefire.version>2.16</maven.surefire.version>
@@ -159,6 +160,14 @@
           <groupId>org.opendaylight.controller</groupId>
           <artifactId>features-nsf</artifactId>
           <version>${feature.nsf.version}</version>
+          <classifier>features</classifier>
+          <type>xml</type>
+        </dependency>
+        <!-- VTN Features -->
+        <dependency>
+          <groupId>org.opendaylight.vtn</groupId>
+          <artifactId>features-vtn-manager</artifactId>
+          <version>${feature.vtn-manager.version}</version>
           <classifier>features</classifier>
           <type>xml</type>
         </dependency>
