enabling ovsdb library, plugin and northbound features
1) Feature Tests Pass:
https://jenkins.opendaylight.org/ovsdb/job/ovsdb-merge/252/org.opendaylight.ovsdb$features-ovsdb/testReport/

2) Features Comply with Guidelines: Yes (features starts with odl-, with description & no Start-levels)

https://git.opendaylight.org/gerrit/gitweb?p=ovsdb.git;a=blob;f=features/src/main/resources/features.xml;h=c401b4bda4042dc8c6168e49537b2e774c6cb1e1;hb=7f3abf4ddd6499a4cb1d70a6222b80c1e3982819ttps://jenkins.opendaylight.org/ovsdb/job/ovsdb-verify/887/org.opendaylight.ovsdb$features-ovsdb/testReport/

3) Features Tested: Features have been tested for functionality with
	feature:install odl-ovsdb-all

4) Integration Test Impact : Basic ovsdb tests should pass now.

Signed-off-by: Madhu Venugopal <mavenugo@gmail.com>

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -43,6 +43,12 @@
       <type>xml</type>
     </dependency>
     <dependency>
+      <groupId>org.opendaylight.ovsdb</groupId>
+      <artifactId>features-ovsdb</artifactId>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
+    <dependency>
       <groupId>org.opendaylight.openflowplugin</groupId>
       <artifactId>features-openflowplugin</artifactId>
       <version>0.0.3-SNAPSHOT</version>
