--- a/features/pom.xml
+++ b/features/pom.xml
@@ -76,6 +76,14 @@
       <classifier>features</classifier>
       <type>xml</type>
     </dependency>
+    <!-- AAA -->
+    <dependency>
+      <groupId>org.opendaylight.aaa</groupId>
+      <artifactId>features-aaa</artifactId>
+      <version>0.1.0-SNAPSHOT</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
     <!-- test to validate features.xml -->
     <dependency>
       <groupId>org.opendaylight.yangtools</groupId>
