--- a/features/pom.xml
+++ b/features/pom.xml
@@ -56,6 +56,13 @@
       <type>xml</type>
     </dependency>
     <dependency>
+      <groupId>org.opendaylight.ovsdb</groupId>
+      <artifactId>features-openflow-nxm</artifactId>
+      <version>0.0.3-SNAPSHOT</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
+    <dependency>
       <groupId>org.opendaylight.l2switch</groupId>
       <artifactId>features-l2switch</artifactId>
       <version>0.1.0-SNAPSHOT</version>
