--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
     <feature.adsal.version>0.8.1-SNAPSHOT</feature.adsal.version>
     <feature.nsf.version>0.4.2-SNAPSHOT</feature.nsf.version>
     <feature.ovsdb.version>1.0.0-SNAPSHOT</feature.ovsdb.version>
+    <feature.ovsdb.openstack.version>1.0.0-SNAPSHOT</feature.ovsdb.openstack.version>
     <karaf.branding.version>1.0.0-SNAPSHOT</karaf.branding.version>
     <karaf.version>3.0.1</karaf.version>
     <maven.surefire.version>2.16</maven.surefire.version>
