Adds pcep-segment-routing extension to SP distribution
Change-Id: I517d6ee574acfa8f5a88a4b62cd4bceb91250295
Signed-off-by: Milos Fabian <milfabia@cisco.com>

--- a/distributions/serviceprovider/pom.xml
+++ b/distributions/serviceprovider/pom.xml
@@ -287,6 +287,11 @@ see https://git.opendaylight.org/gerrit/#/c/390/
       <artifactId>pcep-controller-config</artifactId>
       <version>${bgpcep.version}</version>
     </dependency>
+      <dependency>
+      <groupId>org.opendaylight.bgpcep</groupId>
+      <artifactId>pcep-segment-routing</artifactId>
+      <version>${bgpcep.version}</version>
+    </dependency>
 
     <!-- lispflowmapping -->
 	<dependency>
