Enable DLUX Features for Integration
1) Feature Tests Pass :
https://jenkins.opendaylight.org/dlux/job/dlux-merge/41/org.opendaylight.dlux$features-dlux/testReport/

2) Feature Comply with guidelines: https://git.opendaylight.org/gerrit/gitweb?p=dlux.git;a=blob;f=features/src/main/resources/features.xml;h=00ce6bf65e32955aae7e42908ea11a478d945717;hb=HEAD
        a) Feature Names: Prefixed with 'odl-' : https://wiki.opendaylight.org/view/Runtime:Karaf_Features_Guidelines#Feature_Naming
	b) Features Descriptions: Present https://wiki.opendaylight.org/view/Runtime:Karaf_Features_Guidelines#Description
	c) Features Start-Levels: No start-levels
3) Features Tested: Features have been tested for functionality with
	a) feature:install odl-dlux-core
4) Integration test impact: none

Change-Id: Ib068d0566951909113193593237adf2229863718
Signed-off-by: Harman Singh <harmasin@cisco.com>

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -62,6 +62,13 @@
       <type>xml</type>
     </dependency>
     <dependency>
+      <groupId>org.opendaylight.dlux</groupId>
+      <artifactId>features-dlux</artifactId>
+      <version>${feature.dlux.version}</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
+    <dependency>
       <groupId>org.opendaylight.ovsdb</groupId>
       <artifactId>features-openflow-nxm</artifactId>
       <version>0.0.3-SNAPSHOT</version>
