--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
   <properties>
     <nexusproxy>http://nexus.opendaylight.org/content</nexusproxy>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <feature.dlux.version>0.1.0-SNAPSHOT</feature.dlux.version>
     <feature.mdsal.version>1.1-SNAPSHOT</feature.mdsal.version>
     <feature.flow.version>1.1-SNAPSHOT</feature.flow.version>
     <feature.yangtools.version>0.6.2-SNAPSHOT</feature.yangtools.version>
