Adding ttp features
1) Feature Tests Pass: https://jenkins.opendaylight.org/ttp/job/ttp-merge/org.opendaylight.ttp$features-ttp/lastCompletedBuild/testReport/
2) Features Comply with Guidelines: https://git.opendaylight.org/gerrit/gitweb?p=ttp.git;a=blob;f=features/src/main/resources/features.xml;hb=HEAD
3) Features Tested: Features have been tested for functionality with
   a) feature:install odl-ttp-all
   b) feature:install odl-integration-compatible-with-all
4) Integration Test Impact: none that we are aware of

Change-Id: Ic9d5e54c9298b0121df7a4040a482884c80d257a
Signed-off-by: Colin Dixon <colin@colindixon.com>

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -91,6 +91,13 @@
       <type>xml</type>
     </dependency>
     <dependency>
+      <groupId>org.opendaylight.ttp</groupId>
+      <artifactId>features-ttp</artifactId>
+      <version>${feature.ttp.version}</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
+    <dependency>
       <groupId>org.opendaylight.lispflowmapping</groupId>
       <artifactId>features-lispflowmapping</artifactId>
       <version>${feature.lispflowmapping.version}</version>
