--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
     <feature.ovsdb.version>1.0.0-SNAPSHOT</feature.ovsdb.version>
     <feature.ovsdb.openstack.version>1.0.0-SNAPSHOT</feature.ovsdb.openstack.version>
     <feature.lispflowmapping.version>1.1.11-SNAPSHOT</feature.lispflowmapping.version>
+    <feature.ttp.version>0.0.1-SNAPSHOT</feature.ttp.version>
     <feature.vtn-manager.version>0.2.0-SNAPSHOT</feature.vtn-manager.version>
     <feature.bgp.version>0.3.1-SNAPSHOT</feature.bgp.version>
     <karaf.branding.version>1.0.0-SNAPSHOT</karaf.branding.version>
