1. Feature Tests Pass: https://jenkins.opendaylight.org/snbi/job/snbi-verify/org.opendaylight.snbi$features-snbi/46/testReport/ 2. Features Comply with Guidelines: https://github.com/opendaylight/snbi/blob/master/features/src/main/resources/features.xml 3. Features Tested: Features have been tested for functionality with     a) feature:install odl-snbi-all     b) feature:install odl-integration-compatible-with-all 4. Integration Test Impact: none that we are aware of.
Change-Id: I65d98361f448e61e2e29c35406a3b91785d37d03
Signed-off-by: Vijay Anand R <vanandr@cisco.com>

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -110,6 +110,14 @@
       <classifier>features</classifier>
       <type>xml</type>
     </dependency>
+    <dependency>
+      <groupId>org.opendaylight.snbi</groupId>
+      <artifactId>features-snbi</artifactId>
+      <version>${feature.snbi.version}</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
+
     <!-- test to validate features.xml -->
     <dependency>
       <groupId>org.opendaylight.yangtools</groupId>
