Adding Group Based Policy features.
1) Feature Tests Pass: https://jenkins.opendaylight.org/groupbasedpolicy/job/group-based-policy-merge/36/testReport/
2) Features Comply with Guidelines: https://git.opendaylight.org/gerrit/gitweb?p=groupbasedpolicy.git;a=blob;f=features/src/main/resources/features.xml;h=1cf84de9e65ce6983bba8ad96a2c20733337ce22;hb=refs/heads/master
	a) Feature Names: Prefixed with 'odl-' : https://wiki.opendaylight.org/view/Runtime:Karaf_Features_Guidelines#Feature_Naming
	b) Features Descriptions: Present https://wiki.opendaylight.org/view/Runtime:Karaf_Features_Guidelines#Description
	c) Features Start-Levels: No start-levels on <bundle> elements or <feature> elements
3) Features Tested: Features have been tested for functionality with
	a) feature:install odl-groupbasedpolicy-ofoverlay
4) Integration Test Impact: none

Change-Id: I6c820200f2641ae69b898cba00ff3b0f6309c913
Signed-off-by: Thomas Bachman <tbachman@yahoo.com>

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
     <feature.nsf.version>0.4.2-SNAPSHOT</feature.nsf.version>
     <feature.ovsdb.version>1.0.0-SNAPSHOT</feature.ovsdb.version>
     <feature.ovsdb.openstack.version>1.0.0-SNAPSHOT</feature.ovsdb.openstack.version>
+    <feature.groupbasedpolicy.version>0.1.0-SNAPSHOT</feature.groupbasedpolicy.version>
     <feature.lispflowmapping.version>1.1.11-SNAPSHOT</feature.lispflowmapping.version>
     <feature.snbi.version>1.0.0-SNAPSHOT</feature.snbi.version>
     <feature.ttp.version>0.0.1-SNAPSHOT</feature.ttp.version>
@@ -175,6 +176,16 @@
           <classifier>features</classifier>
           <type>xml</type>
         </dependency>
+
+        <!-- GBP Features -->
+        <dependency>
+          <groupId>org.opendaylight.groupbasedpolicy</groupId>
+          <artifactId>features-groupbasedpolicy</artifactId>
+          <version>${feature.groupbasedpolicy.version}</version>
+          <classifier>features</classifier>
+          <type>xml</type>
+        </dependency>
+
 
         <dependency>
           <groupId>org.opendaylight.bgpcep</groupId>
