--- a/features/pom.xml
+++ b/features/pom.xml
@@ -118,6 +118,12 @@
       <type>xml</type>
     </dependency>
     <dependency>
+      <groupId>org.opendaylight.groupbasedpolicy</groupId>
+      <artifactId>features-groupbasedpolicy</artifactId>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
+    <dependency>
       <groupId>org.opendaylight.snbi</groupId>
       <artifactId>features-snbi</artifactId>
       <version>${feature.snbi.version}</version>
