Adding sfc features
1) Feature Tests Pass: https://jenkins.opendaylight.org/sfc/job/sfc-merge/org.opendaylight.sfc$features-sfc/47/testReport/
2) Features Comply with Guidelines: https://git.opendaylight.org/gerrit/gitweb?p=sfc.git;a=blob;f=features/src/main/resources/features.xml;h=978d57b68cd2154e992674f190d8b9fd189dba76;hb=HEAD
	a) Feature Names: Prefixed with 'odl-' : https://wiki.opendaylight.org/view/Runtime:Karaf_Features_Guidelines#Feature_Naming
	b) Features Descriptions: Present https://wiki.opendaylight.org/view/Runtime:Karaf_Features_Guidelines#Description
	c) Features Start-Levels: No start-levels on <bundle> elements or <feature> elements
3) Features Tested: Features have been tested for functionality with
	a) feature:install odl-sfc-all
4) Integration Test Impact: none

Change-Id: Ic730ac912ef9d991d41ab6da004617a8affb186a
Signed-off-by: paulq <paulq@cisco.com>

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -120,9 +120,19 @@
     <dependency>
       <groupId>org.opendaylight.groupbasedpolicy</groupId>
       <artifactId>features-groupbasedpolicy</artifactId>
+      <version>${feature.groupbasedpolicy.version}</version>
       <classifier>features</classifier>
       <type>xml</type>
     </dependency>
+
+    <dependency>
+      <groupId>org.opendaylight.sfc</groupId>
+      <artifactId>features-sfc</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
+
     <dependency>
       <groupId>org.opendaylight.snbi</groupId>
       <artifactId>features-snbi</artifactId>
