Adding ovssfc renderer feature
1) Feature Tests Pass: https://jenkins.opendaylight.org/ovsdb/job/ovsdb-merge/306/org.opendaylight.ovsdb$features-ovs-sfc/testReport/
2) Features Comply with Guidelines: https://git.opendaylight.org/gerrit/gitweb?p=ovsdb.git;a=blob;f=features/ovs-sfc/src/main/resources/features.xml;h=fe1394b4c0a0147e38681d5cf4b478d293ee2ae8;hb=refs/heads/master
	a) Feature Names: Prefixed with 'odl-' : https://wiki.opendaylight.org/view/Runtime:Karaf_Features_Guidelines#Feature_Naming
	b) Features Descriptions: Present https://wiki.opendaylight.org/view/Runtime:Karaf_Features_Guidelines#Description
	c) Features Start-Levels: No start-levels on <bundle> elements or <feature> elements
3) Features Tested: Features have been tested for functionality with
	a) feature:install odl-ovsdb-ovssfc
4) Integration Test Impact: none

Signed-off-by: Madhu Venugopal <mavenugo@gmail.com>

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -134,6 +134,14 @@
     </dependency>
 
     <dependency>
+      <groupId>org.opendaylight.ovsdb</groupId>
+      <artifactId>features-ovs-sfc</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
+
+    <dependency>
       <groupId>org.opendaylight.snbi</groupId>
       <artifactId>features-snbi</artifactId>
       <version>${feature.snbi.version}</version>
