Adding packetcable feature
1) Feature Tests Pass: https://jenkins.opendaylight.org/packetcable/job/packetcable-verify/org.opendaylight.packetcable$features-packetcable/35/consoleText
2) Features Comply with Guidelines: https://git.opendaylight.org/gerrit/gitweb?p=packetcable.git;a=blob;f=features-packetcable/src/main/resources/features.xml
	a) Feature Names: Prefixed with 'odl-' : https://wiki.opendaylight.org/view/Runtime:Karaf_Features_Guidelines#Feature_Naming
	b) Features Descriptions: Present https://wiki.opendaylight.org/view/Runtime:Karaf_Features_Guidelines#Description
	c) Features Start-Levels: No start-levels on <bundle> elements or <feature> elements
3) Features Tested: Features have been tested for functionality with
	a) feature:install odl-packetcable-all
4) Integration Test Impact: none

Change-Id: Iad97cbef8e5faf17ae1527e23c6a02ae9cb41e41
Signed-off-by: Thomas Kee <xsited@yahoo.com>

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -149,6 +149,14 @@
       <type>xml</type>
     </dependency>
 
+    <dependency>
+       <groupId>org.opendaylight.packetcable</groupId>
+       <artifactId>features-packetcable</artifactId>
+       <version>${feature.packetcable.version}</version>
+       <classifier>features</classifier>
+       <type>xml</type>
+    </dependency>
+
     <!-- test to validate features.xml -->
     <dependency>
       <groupId>org.opendaylight.yangtools</groupId>
