--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
     <feature.ttp.version>0.0.1-SNAPSHOT</feature.ttp.version>
     <feature.vtn-manager.version>0.2.0-SNAPSHOT</feature.vtn-manager.version>
     <feature.bgp.version>0.3.1-SNAPSHOT</feature.bgp.version>
+    <feature.packetcable.version>1.1-SNAPSHOT</feature.packetcable.version>
     <karaf.branding.version>1.0.0-SNAPSHOT</karaf.branding.version>
     <karaf.version>3.0.1</karaf.version>
     <maven.surefire.version>2.16</maven.surefire.version>
@@ -197,7 +198,6 @@
           <type>xml</type>
        </dependency>
 
-
         <dependency>
           <groupId>org.opendaylight.bgpcep</groupId>
           <artifactId>features-bgp</artifactId>
@@ -212,6 +212,16 @@
           <artifactId>features-ovsdb</artifactId>
           <version>${feature.ovsdb.version}</version>
           <classifier>features</classifier>
+          <type>xml</type>
+        </dependency>
+
+
+        <!-- packetcable Related Features -->
+        <dependency>
+           <groupId>org.opendaylight.packetcable</groupId>
+           <artifactId>features-packetcable</artifactId>
+           <version>${feature.packetcable.version}</version>
+           <classifier>features</classifier>
           <type>xml</type>
         </dependency>
 
