Adding Karaf feature of clustering test app
Signed-off-by: Harman Singh <harmasin@cisco.com>

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -156,12 +156,29 @@
       <type>xml</type>
     </dependency>
 
+
     <dependency>
        <groupId>org.opendaylight.packetcable</groupId>
        <artifactId>features-packetcable</artifactId>
        <version>${feature.packetcable.version}</version>
        <classifier>features</classifier>
        <type>xml</type>
+    </dependency>
+    <!-- clustering test application -->
+    <dependency>
+      <groupId>org.opendaylight.controller</groupId>
+      <artifactId>clustering-it-config</artifactId>
+      <version>${clustering.it.test.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.controller</groupId>
+      <artifactId>clustering-it-model</artifactId>
+      <version>${clustering.it.test.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.controller</groupId>
+      <artifactId>clustering-it-provider</artifactId>
+      <version>${clustering.it.test.version}</version>
     </dependency>
 
     <!-- test to validate features.xml -->
