--- a/features/pom.xml
+++ b/features/pom.xml
@@ -32,6 +32,13 @@
     </dependency>
     <dependency>
       <groupId>org.opendaylight.controller</groupId>
+      <artifactId>features-netconf-connector</artifactId>
+      <version>${feature.mdsal.version}</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.controller</groupId>
       <artifactId>features-adsal</artifactId>
       <classifier>features</classifier>
       <type>xml</type>
