--- a/features/pom.xml
+++ b/features/pom.xml
@@ -165,6 +165,14 @@
        <type>xml</type>
     </dependency>
 
+    <dependency>
+      <groupId>org.opendaylight.snmp4sdn</groupId>
+      <artifactId>features-snmp4sdn</artifactId>
+      <version>0.1.3-SNAPSHOT</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
+
     <!-- test to validate features.xml -->
     <dependency>
       <groupId>org.opendaylight.yangtools</groupId>
