Adding plugin2oc features
1) Feature Tests Pass: https://jenkins.opendaylight.org/plugin2oc/job/plugin2oc-merge/9/testReport/
2) Features Comply with Guidelines: https://git.opendaylight.org/gerrit/gitweb?p=plugin2oc.git;a=blob;f=features-plugin2oc/src/main/resources/features.xml;h=1a87f27c04568ba288745a031a01b7b5bb382af1;hb=HEAD
	a) Feature Names: odl-plugin2oc
	b) Features Descriptions: OpenDaylight :: plugin2oc :: Plugin
3) Features Tested: Features have been tested for functionality with
	a) feature:install odl-plugin2oc
	b) feature:install odl-integration-compatible-with-plugin2oc

Signed-off-by: Christopher O'Shea <christopher.o.shea@ericsson.com>
Change-Id: I8272307614e134bf0018f2dfd779df1930399aec

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -96,6 +96,15 @@
       <classifier>features</classifier>
       <type>xml</type>
     </dependency>
+    <!-- plugin2oc -->
+    <dependency>
+       <groupId>org.opendaylight.plugin2oc</groupId>
+       <artifactId>features-plugin2oc</artifactId>
+       <version>0.1</version>
+       <classifier>features</classifier>
+       <type>xml</type>
+    </dependency>
+
     <!-- AAA -->
     <dependency>
       <groupId>org.opendaylight.aaa</groupId>
