--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
     <feature.vtn-manager.version>0.2.0-SNAPSHOT</feature.vtn-manager.version>
     <feature.bgp.version>0.3.1-SNAPSHOT</feature.bgp.version>
     <feature.packetcable.version>1.1-SNAPSHOT</feature.packetcable.version>
+    <feature.plugin2oc.version>0.1</feature.plugin2oc.version>
     <karaf.branding.version>1.0.0-SNAPSHOT</karaf.branding.version>
     <karaf.version>3.0.1</karaf.version>
     <maven.surefire.version>2.16</maven.surefire.version>
@@ -215,6 +216,14 @@
           <type>xml</type>
         </dependency>
 
+        <!-- Plugin2oc Related Features -->
+        <dependency>
+          <groupId>org.opendaylight.plugin2oc</groupId>
+          <artifactId>features-plugin2oc</artifactId>
+          <version>0.1</version>
+          <classifier>features</classifier>
+          <type>xml</type>
+        </dependency>
 
         <!-- packetcable Related Features -->
         <dependency>
