--- a/distributions/extra/karaf/pom.xml
+++ b/distributions/extra/karaf/pom.xml
@@ -62,6 +62,23 @@
       <type>xml</type>
       <scope>runtime</scope>
     </dependency>
+
+    <!-- External application -->
+    <dependency>
+      <groupId>org.opendaylight.vtn</groupId>
+      <artifactId>distribution.vtn-coordinator</artifactId>
+      <version>6.0.0.0-SNAPSHOT</version>
+      <type>tar.bz2</type>
+      <classifier>bin</classifier>
+    </dependency>
+
+    <dependency>
+      <groupId>org.opendaylight.vtn</groupId>
+      <artifactId>distribution.vtn-coordinator</artifactId>
+      <version>6.0.0.0-SNAPSHOT</version>
+      <type>txt</type>
+      <classifier>README</classifier>
+    </dependency>
   </dependencies>
 
   <build>
@@ -230,12 +247,28 @@
             </goals>
             <configuration>
               <outputDirectory>${project.build.directory}/assembly/system</outputDirectory>
+              <excludeArtifactIds>distribution.vtn-coordinator</excludeArtifactIds>
               <overWriteReleases>false</overWriteReleases>
               <overWriteSnapshots>true</overWriteSnapshots>
               <overWriteIfNewer>true</overWriteIfNewer>
               <useRepositoryLayout>true</useRepositoryLayout>
               <addParentPoms>true</addParentPoms>
               <copyPom>true</copyPom>
+            </configuration>
+          </execution>
+          <execution>
+            <id>copy-externalapps</id>
+            <phase>prepare-package</phase>
+            <goals>
+              <goal>copy-dependencies</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${project.build.directory}/assembly/externalapps</outputDirectory>
+              <includeArtifactIds>distribution.vtn-coordinator</includeArtifactIds>
+              <overWriteReleases>false</overWriteReleases>
+              <overWriteSnapshots>true</overWriteSnapshots>
+              <overWriteIfNewer>true</overWriteIfNewer>
+              <excludeTransitive>true</excludeTransitive>
             </configuration>
           </execution>
         </executions>
