Adding sdninterfaceapp features
1) Feature Tests Pass:
https://jenkins.opendaylight.org/sdninterfaceapp/job/sdninterfaceapp-merge/org.opendaylight.sdninterfaceapp$features-sdninterfaceapp/10/testReport/
2) Features Comply with Guidelines:
https://git.opendaylight.org/gerrit/gitweb?p=sdninterfaceapp.git;a=blob;f=features/src/main/resources/features.xml;h=ef8bb78b852d0585125641418e79a2d65e77d325;hb=272b9142ddea044b401fe2dfe08422aac0b4ca45
  a) Feature Names: odl-sdninterfaceapp
  b) Features Descriptions: OpenDaylight :: sdninterfaceapp
3) Features Tested: Features have been tested for functionality with
  a) feature:install odl-sdinterfaceapp
  b) feature:install odl-integration-compatible-with-all

Change-Id: Ida13f64895c7baa3e4b4a4ff5307d844fc0c2172
Signed-off-by: rafatjahan <rafat.jahan@tcs.com>

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -181,6 +181,15 @@
       <classifier>features</classifier>
       <type>xml</type>
     </dependency>
+   
+    <dependency>
+      <groupId>org.opendaylight.sdninterfaceapp</groupId> 
+      <artifactId>features-sdninterfaceapp</artifactId> 
+      <version>1.4.2-SNAPSHOT</version> 
+      <classifier>features</classifier> 
+      <type>xml</type> 
+    </dependency>
+
 
     <!-- test to validate features.xml -->
     <dependency>
