Adding plugin2oc features
1) Feature Tests Pass: https://jenkins.opendaylight.org/plugin2oc/job/plugin2oc-merge/12/testReport/
2) Features Comply with Guidelines: https://git.opendaylight.org/gerrit/gitweb?p=plugin2oc.git;a=blob;f=features-plugin2oc/src/main/resources/features.xml;h=abdf565022f48949fcf7858bd9acca74cb1ca826;hb=bfec9aaba5e14eaaa12fa26e01466f69c47c338e
	a) Feature Names: odl-plugin2oc
	b) Features Descriptions: OpenDaylight :: plugin2oc :: Plugin
3) Features Tested: Features have been tested for functionality with
	a) feature:install odl-plugin2oc
	b) feature:install odl-integration-compatible-with-plugin2oc
4) Updated version for plugin2oc

Signed-off-by: pchopra <pchopra@juniper.net>

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -100,7 +100,7 @@
     <dependency>
        <groupId>org.opendaylight.plugin2oc</groupId>
        <artifactId>features-plugin2oc</artifactId>
-       <version>0.1</version>
+       <version>0.1-SNAPSHOT</version>
        <classifier>features</classifier>
        <type>xml</type>
     </dependency>
