added sfclisp feature to integration
Change-Id: Ifdb7d78462a6ac49dbbf5f5965e20b338eb2fab8
Signed-off-by: David Goldberg <david.goldberg@contextream.com>

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -150,6 +150,14 @@
     </dependency>
 
     <dependency>
+      <groupId>org.opendaylight.sfc</groupId>
+      <artifactId>features-sfclisp</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
+
+    <dependency>
       <groupId>org.opendaylight.ovsdb</groupId>
       <artifactId>features-ovs-sfc</artifactId>
       <version>0.0.1-SNAPSHOT</version>
