Adding sfc features
1) Feature Tests Pass: https://jenkins.opendaylight.org/sfc/job/sfc-merge/org.opendaylight.sfc$features-sfcofl2/56/testReport/

2) Features Comply with Guidelines: https://git.opendaylight.org/gerrit/gitweb?p=sfc.git;a=blob;f=features-sfcofl2/src/main/resources/features.xml;h=431e943f0bea488e9272f3a19ae935df0012bc1c;hb=HEAD
a) Feature Names: Prefixed with 'odl-' : odl-sfcofl2
b) Features Descriptions: OpenDaylight :: sfcofl2
c) Features Start-Levels: No start-levels on <bundle> elements or <feature> elements

3) Features Tested: Features have been tested for functionality with
a) feature:install odl-sfcofl2

4) Integration Test Impact: none

Change-Id: I662a0a3359dfd4a8c9a373c22320d3478b59fa0e
Signed-off-by: David Goldberg <david.goldberg@contextream.com>

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -158,6 +158,14 @@
     </dependency>
 
     <dependency>
+          <groupId>org.opendaylight.sfc</groupId>
+          <artifactId>features-sfcofl2</artifactId>
+          <version>0.0.1-SNAPSHOT</version>
+          <classifier>features</classifier>
+          <type>xml</type>
+    </dependency>
+
+    <dependency>
       <groupId>org.opendaylight.ovsdb</groupId>
       <artifactId>features-ovs-sfc</artifactId>
       <version>0.0.1-SNAPSHOT</version>
