Bug 1919 Bug 1927 copy bundles for karaf standard features into system/
This patch:

Copies the bundles for the karaf standard features into system

Excludes dependencies from non-java artifacts that are conflicing
with actual java artifacts (the vtn binaries)

Adds a org.ops4j.url.mvn.cfg file that:
a)  Reorders the repos so we look in system/ first
b)  Uses system/ as the localRepo so that
	i)  We don't search .m2 (and thus possible get bum artifacts)
	ii) We don't copy files from system to .m2 (slow)

Change-Id: I81fc20f16c8b1a2a5642a0c3934d93857a294497
Signed-off-by: Ed Warnicke <eaw@cisco.com>

--- a/distributions/extra/karaf/pom.xml
+++ b/distributions/extra/karaf/pom.xml
@@ -25,6 +25,16 @@
       <artifactId>framework</artifactId>
       <version>${karaf.version}</version>
       <type>kar</type>
+      <exclusions>
+        <exclusion>
+          <groupId>org.osgi</groupId>
+          <artifactId>org.osgi.core</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.apache.sshd</groupId>
+          <artifactId>sshd-core</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <!-- scope is runtime so the feature repo is listed in the features
       service config file, and features may be installed using the
@@ -70,6 +80,20 @@
       <version>6.0.0.0-SNAPSHOT</version>
       <type>tar.bz2</type>
       <classifier>bin</classifier>
+      <exclusions>
+        <exclusion>
+          <groupId>com.google.code.gson</groupId>
+          <artifactId>gson</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>commons-codec</groupId>
+          <artifactId>commons-codec</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.json</groupId>
+          <artifactId>json</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <dependency>
@@ -78,6 +102,20 @@
       <version>6.0.0.0-SNAPSHOT</version>
       <type>txt</type>
       <classifier>README</classifier>
+      <exclusions>
+        <exclusion>
+          <groupId>com.google.code.gson</groupId>
+          <artifactId>gson</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>commons-codec</groupId>
+          <artifactId>commons-codec</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.json</groupId>
+          <artifactId>json</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
   </dependencies>
 
@@ -165,6 +203,29 @@
     </pluginManagement>
     <plugins>
       <plugin>
+        <artifactId>maven-resources-plugin</artifactId>
+        <version>2.6</version>
+        <executions>
+          <execution>
+            <id>copy-resources</id>
+            <!-- here the phase you need -->
+            <phase>prepare-package</phase>
+            <goals>
+              <goal>copy-resources</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${basedir}/target/assembly</outputDirectory>
+              <resources>
+                <resource>
+                  <directory>src/main/assembly</directory>
+                </resource>
+              </resources>
+              <overwrite>true</overwrite>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
         <groupId>org.apache.karaf.tooling</groupId>
         <artifactId>karaf-maven-plugin</artifactId>
         <version>${karaf.version}</version>
@@ -177,6 +238,28 @@
           <!-- no installedFeatures -->
         </configuration>
         <executions>
+          <execution>
+            <id>populate-system</id>
+            <phase>generate-resources</phase>
+            <goals>
+              <goal>features-add-to-repository</goal>
+            </goals>
+            <configuration>
+              <descriptors>
+                <descriptor>mvn:org.apache.karaf.features/standard/${karaf.version}/xml/features</descriptor>
+              </descriptors>
+              <features>
+                <feature>standard</feature>
+                <feature>config</feature>
+                <feature>package</feature>
+                <feature>kar</feature>
+                <feature>ssh</feature>
+                <feature>management</feature>
+                <feature>war</feature>
+              </features>
+              <repository>target/assembly/system</repository>
+            </configuration>
+          </execution>
           <execution>
             <id>process-resources</id>
             <goals>
