BUG-2082: add missing unpack command
This fixes failure to unpack the TCP-MD5 configuration in SP edition.

Change-Id: I21a59558c6a69e59d3f29c3ae884743d54d4956d
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/distributions/serviceprovider/pom.xml
+++ b/distributions/serviceprovider/pom.xml
@@ -393,6 +393,7 @@ see https://git.opendaylight.org/gerrit/#/c/390/
               </includeArtifactIds>
               <includeGroupIds>
                 org.opendaylight.bgpcep,
+                org.opendaylight.tcpmd5,
               </includeGroupIds>
               <excludeTransitive>true</excludeTransitive>
               <ignorePermissions>false</ignorePermissions>
