Revert "Removing opendove from virt edition"
This reverts commit dafb958a997abb3328cca3bf51a0ddce488a23a0.

Change-Id: Ic7242450917dcb7da14c229435e9e2128d8e1c98
Signed-off-by: Luis Gomez <ecelgp@gmail.com>

--- a/distributions/virtualization/pom.xml
+++ b/distributions/virtualization/pom.xml
@@ -78,6 +78,39 @@ see https://git.opendaylight.org/gerrit/#/c/390/
       <classifier>README</classifier>
     </dependency>
 
+    <!-- opendove -->
+
+    <dependency>
+      <groupId>org.opendaylight.opendove</groupId>
+      <artifactId>odmc</artifactId>
+      <version>0.5.2-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.opendaylight.opendove</groupId>
+      <artifactId>odmc.implementation</artifactId>
+      <version>0.5.2-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.opendaylight.opendove</groupId>
+      <artifactId>odmc.rest</artifactId>
+      <version>0.5.2-SNAPSHOT</version>
+    </dependency>
+
+
+    <dependency>
+      <groupId>org.opendaylight.opendove</groupId>
+      <artifactId>odmc.rest.northbound</artifactId>
+      <version>0.5.2-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.opendaylight.opendove</groupId>
+      <artifactId>odmc.rest.southbound</artifactId>
+      <version>0.5.2-SNAPSHOT</version>
+    </dependency>
+
   </dependencies>
   <build>
     <resources>
